Play with @NotNull